# cyberfinrisk

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Data_flow.md  Makefile  Methodology.md  README.md  Readme.md  SECURITY.md  build.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: backend-ci.yml  codeql-analysis.yml  frontend-ci.yml  release.yml  secret-scanning.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  exampleenv.md  main.py  requirements.txt  sonar-project.properties
backend/Doc/: future.md  implement.md  repo_json.md
backend/Doc/architecture/: 01_why_finrisk.md  02_architecture_decisions.md  03_financial_model_math.md  04_interview_defense_guide.md  05_performance_benchmarks.md
backend/Doc/archive/: bug_fix_analysis.md
backend/Doc/code_wiki/: 00_why_finrisk.md
backend/Doc/experiment_log/: repo_json.md
backend/data/: risk_results.json
backend/engine/: __main__.py  attack_chain.py  business_brief.py  classifier.py  expected_loss.py  gemini_analyzer.py  impact_model.py  probability_model.py  scanner.py
backend/knowledge_base/: attack_stories.json
backend/models/: company.py  project_schemas.py  risk_result.py
front/.next/: trace
frontend/: Dockerfile  exampleenv.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: page.tsx
helm/cyberfinrisk/: Chart.yaml  values.yaml
monitoring/otel/: otel-collector-config.yml
monitoring/prometheus/: prometheus.yml
tests/: conftest.py  test_expected_loss.py  test_impact_model.py
(+21 files in other folders)
