[project]
name = "cyberfinrisk"
version = "3.0.0"
description = "Vulnerability Financial Impact Engine — FAIR-lite Monte Carlo risk quantification"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*", "demo_*"]
addopts = "-v --tb=short -q"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # naming
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
]
ignore = [
    "E501",  # line length handled by formatter
    "N802",  # allow lowercase function names (Python convention for this project)
]

[tool.ruff.lint.per-file-ignores]
"backend/main.py" = ["B008", "E402", "B904", "N806", "F841"]
"backend/models/db/__init__.py" = ["F401"]
"backend/engine/scanner.py" = ["E741", "E722", "B007"]
"backend/engine_improver.py" = ["F821", "E402", "SIM112"]
"backend/list_models.py" = ["SIM112"]
"backend/research_paper.py" = ["E402", "E731", "SIM112", "SIM115", "F821"]
"backend/utils/email_utils.py" = ["SIM210"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
